[package]
name = "actix-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tinytemplate = "1.2.1"
actix-files = "0.6.5"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
